# Softwire

./: .gitignore  ADAPTER_SPEC.md  AGENTS.md  CLAUDE.md  LICENSE.md  MANIFEST.in  README.md  README_PYPI.md  gpt-launch.md  new-skills-creation.md  photoshop_bridge.py  pyproject.toml  skill.md  softwire-laptop-test-2.md
.claude/: settings.json
3dsmax_adapter/: 3dsmax_bridge.py  APP.md  CLAUDE.md  README.md  __init__.py
3dsmax_adapter/docs/: known-patterns.md  sources.md
3dsmax_adapter/inprocess/: creative_adapter_bridge.py
adapters/3dsmax_adapter/: 3dsmax_bridge.py  APP.md  README.md  install_bridge.ps1
adapters/after_effects_adapter/: AGENTS.md  APP.md  README.md  __init__.py  after_effects_bridge.py
adapters/audition_adapter/: APP.md  README.md  audition_bridge.py
adapters/blender_adapter/: APP.md  README.md  blender_bridge.py
adapters/excel_adapter/: APP.md  README.md  excel_bridge.py
adapters/houdini_adapter/: AGENTS.md  APP.md  README.md  __init__.py  houdini_bridge.py
adapters/illustrator_adapter/: APP.md  README.md  __init__.py  illustrator_bridge.py
adapters/indesign_adapter/: APP.md  README.md  __init__.py  indesign_bridge.py
adapters/photoshop_adapter/: APP.md  README.md  photoshop_bridge.py
adapters/powerpoint_adapter/: APP.md  README.md  __init__.py  powerpoint_bridge.py
adapters/premiere_adapter/: APP.md  README.md  __init__.py  install_cep_bridge.ps1  premiere_bridge.py
adapters/unity_adapter/: APP.md  README.md  unity_bridge.py
adapters/word_adapter/: APP.md  README.md  word_bridge.py
after_effects_adapter/: APP.md  README.md  after_effects_bridge.py  install_cep_bridge.ps1
after_effects_adapter/docs/: known-patterns.md  sources.md
after_effects_adapter/examples/: context.jsx
audition_adapter/: APP.md  CLAUDE.md  README.md  __init__.py  audition_bridge.py  install_cep_bridge.ps1
audition_adapter/docs/: known-patterns.md  sources.md
blender_adapter/: AGENTS.md  APP.md  README.md  __init__.py  blender_bridge.py  install_addon.ps1
blender_adapter/docs/: known-patterns.md  sources.md
blender_adapter/examples/: add-blue-cube.py  context.py
bridges/: __init__.py  applescript_bridge.py  com_bridge.py  local_http_bridge.py
creative_adapters/: com_bridge.py  local_http_bridge.py
docs/: ADAPTER_SPEC.md  api-index-strategy.md  harenesses.md  harnesses.md  known-issues.md  mcp.md  setup.md  why-shell-adapters.md
excel_adapter/: AGENTS.md  APP.md  README.md  __init__.py  excel_bridge.py
flue/: cli.py  known-issues.md  setup.md  skill.md
houdini_adapter/: AGENTS.md  APP.md  README.md  houdini_bridge.py  install_bridge.ps1
houdini_adapter/examples/: add-blue-sphere.py
houdini_adapter/inprocess/: creative_adapter_loader.py
illustrator_adapter/: APP.md  CLAUDE.md  README.md  illustrator_bridge.py
illustrator_adapter/docs/: known-patterns.md  sources.md
indesign_adapter/: APP.md  CLAUDE.md  README.md  indesign_bridge.py
indesign_adapter/docs/: sources.md  (+1 more)
photoshop_adapter/: APP.md  CLAUDE.md  README.md  __init__.py  photoshop_bridge.py
powerpoint_adapter/: AGENTS.md  APP.md  README.md  powerpoint_bridge.py
premiere_adapter/: APP.md  CLAUDE.md  README.md  premiere_bridge.py
shared/: __init__.py  bridge-contract.md  coexistence.md
softwire/: cli.py  known-issues.md  setup.md  skill.md  windows_ui.py
thewire/: cli.py
tools/: __init__.py  cleanup_bridges.py  probe_adobe_com.ps1
unity_adapter/: AGENTS.md  APP.md  CLAUDE.md  README.md  __init__.py  install_package.ps1  unity_bridge.py
word_adapter/: AGENTS.md  APP.md  README.md  __init__.py  word_bridge.py
(+83 files in other folders)
