[build-system]
requires = ["setuptools>=69,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flue"
version = "0.1.25"
description = "Local scripting bridges for controlling professional creative software from a shell agent."
readme = { file = "README_PYPI.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
  { name = "Creative Adapters" }
]
maintainers = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "pywin32>=306; platform_system == 'Windows'"
]

[project.scripts]
flue = "flue.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  "*.md",
  "*.txt",
  "docs/*.md",
  "docs/*.txt",
  "known-issues.md",
  "examples/*",
  "cep/**/*",
  "addon/*",
  "inprocess/*",
  "package/**/*",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "flue",
  "flue.*",
  "bridges",
  "shared",
  "tools",
  "adapters",
  "adapters.*"
]
